--- a/index.html
+++ b/index.html
@@ -761,5 +761,38 @@
         window.showAlert = showAlert;
     </script>
 <script src="https://abackmentor.com/6d/9e/c6/6d9ec6327e8ceedfc09f55aa481a733c.js"></script>
+// In-App Interstitial
+
+show_10551070({
+  type: 'inApp',
+  inAppSettings: {
+    frequency: 2,
+    capping: 0.1,
+    interval: 30,
+    timeout: 5,
+    everyPage: false
+  }
+})
+
+/*
+This value is decoded as follows:
+- show automatically 2 ads
+  within 0.1 hours (6 minutes)
+  with a 30-second interval between them
+  and a 5-second delay before the first one is shown.
+  The last digit, 0, means that the session will be saved when you navigate between pages.
+  If you set the last digit as 1, then at any transition between pages,
+  the session will be reset, and the ads will start again.
+*/<script src='//libtl.com/sdk.js' data-zone='10551070' data-sdk='show_10551070'></script>
+    // Rewarded Popup
+
+show_10551070('pop').then(() => {
+    // user watch ad till the end or close it in interstitial format
+    // your code to reward user for rewarded format
+}).catch(e => {
+    // user get error during playing ad
+    // do nothing or whatever you want
+})
 </body>
+
 </html>
